--- a/index.html
+++ b/index.html
@@ -42,55 +42,23 @@
             </div>
           </nav>
     </header>
-    <div class="container">
-        <h1>Bienvenido a la pagina de moda mas caradura </h1>
-        <h3>bienvenido/a</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi temporibus, quo facilis ipsa neque molestiae!</p>
-    </div>
     <main>
-        <div class="contenedorProductos">
-            <div class="contenedorProducto">
-                <img class="imagen" src="./multimediaa/imgg/vans4.webp" alt="">
-                <h2 class="subtitulo">zapas vans noisy</h2>
-                <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, dignissimos.</p>
-              <h3 class="precio">30.000</h3>  
-
-            </div>
-            <div class="contenedorProducto">
-                <img class="imagen" src="./multimediaa/imgg/vans5.webp" alt="">
-                <h2 class="subtitulo">zapas vans happy</h2>
-                <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, dignissimos.</p>
-                <h3 class="precio">30.000</h3>
-            </div>
-            <div class="contenedorProducto">
-                <img class="imagen" src="./multimediaa/imgg/vans6.webp" alt="">
-                <h2 class="subtitulo">zapas vans smily</h2>
-                <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, dignissimos.</p>
-                <h3 class="precio">30.000</h3>
-            </div>
-        </div>
-        <div class="contenedorProductos">
-            <div class="contenedorProducto">
-                <img class="imagen" src="./multimediaa/imgg/vans4.webp" alt="">
-                <h2 class="subtitulo">zapas vans noisy</h2>
-                <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, dignissimos.</p>
-              <h3 class="precio">30.000</h3>  
-
-            </div>
-            <div class="contenedorProducto">
-                <img class="imagen" src="./multimediaa/imgg/vans5.webp" alt="">
-                <h2 class="subtitulo">zapas vans happy</h2>
-                <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, dignissimos.</p>
-                <h3 class="precio">30.000</h3>
-            </div>
-            <div class="contenedorProducto">
-                <img class="imagen" src="./multimediaa/imgg/vans6.webp" alt="">
-                <h2 class="subtitulo">zapas vans smily</h2>
-                <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, dignissimos.</p>
-                <h3 class="precio">30.000</h3>
-            </div>
-        </div>  
-    </main>
+      <div>
+        <h1>Ruleta Loca</h1>
+        <h4>¡ El juego que te hara millonario en segundos!</h4>
+      </div>
+      <link rel="stylesheet" type="text/css" href="styles.css">
+      <h1>Simulador de Ruleta</h1>
+      <div id="ruleta">
+          <div class="separacion negro"></div>
+          <div class="separacion rojo"></div>
+          <div class="separacion negro"></div>
+          <div class="separacion rojo"></div>
+          <div class="separacion negro"></div>
+          <div class="separacion rojo"></div>
+      </div>
+      <div id="mensaje"></div>
+    </main>  
     <footer>
 
     </footer>
