simulador de ruleta

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
       <div id="mensaje"></div>
     </main>  
     <footer>
-
+      <div id="mensaje"></div>
+      <h2>Últimas apuestas</h2>
+      <ul id="ultimasApuestas"></ul>
+      <h2>Últimos colores ganadores</h2>
+      <ul id="ultimosColoresGanadores"></ul>
     </footer>
     
 </body>
