--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <a class="nav-link active" aria-current="page" href="#">Play</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Retirar dinero</a>
+                    <a class="nav-link" href="./pages/dinero.html">Retirar dinero</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Ingresar dinero</a>
+                    <a class="nav-link" href="./pages/ingresarDinero.html">Ingresar dinero</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -45,6 +45,13 @@
     <main>
       <div>
         <div class="dineroDisponible" id="dineroAcumulado">Dinero acumulado: $<span id="montoAcumulado">0</span></div>
+        <head>
+          <title>Valor del Dólar Blue</title>
+          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        </head>
+        <body>
+          <h1>Valor del Dólar Blue</h1>
+          <div id="blue-value"></div>
         <h1  class="subtitle">Ruleta Loca</h1>
         <h4>¡ El juego que te hara millonario en segundos!</h4>
         <form class="formulario" id="ruletaForm">
@@ -65,7 +72,7 @@
       </div>
       <div id="mensaje"></div>
     </main>  
-    <footer>
+    <footer class="stats">
       <div id="mensaje"></div>
       <h2>Últimas apuestas</h2>
       <ul id="ultimasApuestas"></ul>
@@ -74,6 +81,8 @@
     </footer>
     
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <script src="./js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
