--- a/pages/ingresarDinero.html
+++ b/pages/ingresarDinero.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>Document</title> 
     <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
@@ -40,10 +40,41 @@
                 </ul>
               </div>
             </div>
-          </nav>
+          </nav>  
     </header>
     <main>
-        <h1 class="title"> En que podemos ayudarte ?</h1>
+        <div>
+            <h1 class="title">Ingresa dinero para Apostar</h1>  
+        </div> 
+        <div>
+            <h3 class="title">elije un método de pago</h3>
+        </div>
+        <div class="cards">
+            <div class="card" style="width: 18rem;">
+                <a href="./cardsForm.html"><img src="../multimediaa/img/tarjeta1.png" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <p class="card-text">tarjeta mercado pago, sin límite de ingreso</p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <a href="./cardsForm.html"><img src="../multimediaa/img/tarjeta4.jpeg" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <p class="card-text">tarjeta naranja, límite acorde al usuario</p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+               <a href="./cardsForm.html"> <img src="../multimediaa/img/tarjeta3.jpeg" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <p class="card-text">tarjeta mastercard, límite acorde al usuario</p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <a href="./cardsForm.html"><img src="../multimediaa/img/tjvisapng.webp" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <p class="card-text">tarjeta visa, sin límite de ingreso</p>
+                </div>
+              </div>
+        </div>
     </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
