--- a/pages/dinero.html
+++ b/pages/dinero.html
@@ -3,13 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-<body class="">
+<body>
     <header>
-        <h1>dinerooo</h1>
+        <nav class="navbar navbar-expand-lg bg-light ">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Rouletty<head></head></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Play</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./dinero.html">Retirar dinero</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./ingresarDinero.html">Ingresar dinero</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Ayuda
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./pages/ayuda.html">Quiero comunicarme con soporte</a></li>
+                      <li><a class="dropdown-item" href="./pages/dinero.html">no puedo retirar o ingesar dinero</a></li>
+                      <li><a class="dropdown-item" href="./pages/comentario.html">quiero dejar un comentario</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>  
     </header>
+    <main>
+        <div>
+            <h1 class="title">Retira tu dinero ganado</h1>  
+        </div> 
+        <div>
+            <h3 class="title">Donde quieres que tu dinero sea depositado?</h3>
+        </div>
+        <div class="cards">
+            <div class="card" style="width: 18rem;">
+                <a href="./cardsForm.html"><img src="../multimediaa/img/tarjeta1.png" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <p class="card-text">tarjeta mercado pago</p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <a href="./cardsForm.html"><img src="../multimediaa/img/tarjeta4.jpeg" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <p class="card-text">tarjeta naranja</p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+               <a href="./cardsForm.html"> <img src="../multimediaa/img/tarjeta3.jpeg" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <p class="card-text">tarjeta mastercard</p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem;">
+                <a href="./cardsForm.html"><img src="../multimediaa/img/tjvisapng.webp" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                  <p class="card-text">tarjeta visa</p>
+                </div>
+              </div>
+        </div>
+    </main>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </html>
