--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
           </nav>
     </header>
     <main>
+      
+
+<div id="DatosDolar">
+</div>
       <div>
         <div class="dineroDisponible" id="dineroAcumulado">Dinero acumulado: $<span id="montoAcumulado">0</span></div>
         <head>
           <title>Valor del Dólar Blue</title>
-          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         </head>
         <body>
           <h1>Valor del Dólar Blue</h1>
-          <div id="blue-value"></div>
-        <h1  class="subtitle">Ruleta Loca</h1>
+       <h1  class="subtitle">Ruleta Loca</h1>
         <h4>¡ El juego que te hara millonario en segundos!</h4>
         <form class="formulario" id="ruletaForm">
           <label for="apuesta">Apostar al color:</label>
@@ -86,3 +88,4 @@
 <script src="./js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
+
