--- a/pages/dinero.html
+++ b/pages/dinero.html
@@ -19,10 +19,10 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Play</a>
+                    <a class="nav-link " aria-current="page" href="../index.html">Play</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./dinero.html">Retirar dinero</a>
+                    <a class="nav-link active" href="./dinero.html">Retirar dinero</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./ingresarDinero.html">Ingresar dinero</a>
